--- a/css/styles.css
+++ b/css/styles.css
@@ -12,3 +12,18 @@ h1 {
   text-align: center;
   border: 1px solid black;
 }
+label[for='new-player'] {
+  display: block;
+  margin: 0 0 20px;
+}
+input#new-player {
+  float: left;
+  width: 318px;
+}
+
+input#upper{
+  width: 318px;
+}
+button#upper{
+  display: inline;
+}
