animated gif appears based on GuessCount.

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,8 @@ select#range-options{
 button#upper{
   display: inline;
 }
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
